Prevent UI jumps when showing save status

--- a/src/components/SaveStatusComponent/style.css
+++ b/src/components/SaveStatusComponent/style.css
@@ -2,3 +2,7 @@
   width: 1em;
   height: 1em;
 }
+
+.savestatus-container {
+  min-width: 3em;
+}
